--- a/milk_ui/package.json
+++ b/milk_ui/package.json
@@ -11,6 +11,7 @@
     "start": "node node_modules/react-native-macos/local-cli/cli.js start"
   },
   "dependencies": {
+    "babel-plugin-module-resolver": "^3.2.0",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-macos": "0.19.3"
