cowboy hello world

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,16 @@
 {erl_opts, [debug_info]}.
 {deps, [
+    {cowboy, "2.6.3"},
+    {jiffy, {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
+    {sha3, {git, "https://github.com/b/sha3.git", {branch, "master"}}},
+    {hex, {git, "git://github.com/b/hex", {branch, "master"}}}
 ]}.
+
+{plugins, [rebar3_run]}.
 
 {relx, [{release, {milkshell, "0.1.0"},
          [milkshell,
+         cowboy,
           sasl]},
 
         {sys_config, "./config/sys.config"},
