--- a/milkui/package.json
+++ b/milkui/package.json
@@ -11,7 +11,8 @@
     "react": "16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "0.60.4",
-    "react-native-web": "^0.11.5"
+    "react-native-web": "^0.11.5",
+    "react-use-websocket": "^0.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
