--- a/python/Pipfile
+++ b/python/Pipfile
@@ -4,9 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+mypy = "*"
 
 [packages]
-trio = "*"
+milkshell = {editable = true,path = "."}
 
 [requires]
 python_version = "3.8"
