--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,13 @@ regex = "1.3.1"
 lazy_static = "1.4.0"
 unindent = "0.1.5"
 serde_json = "1.0"
+crossbeam = "0.7.3"
+
+tokio = { version = "0.2", features = ["full"] }
+tokio-tungstenite = "*"
+tungstenite = "*"
+futures = "*"
+futures-intrusive = "0.3.0"
+[dependencies.async-std]
+version = "1.5.0"
+features = ["unstable"]
