--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,10 @@ tokio = { version = "0.2", features = ["full"] }
 tokio-tungstenite = "*"
 tungstenite = "*"
 futures = "*"
-futures-intrusive = "0.3.0"
+
+# looked cool, trait requirements didn't work
+#futures-intrusive = "0.3.0"
+
 [dependencies.async-std]
 version = "1.5.0"
 features = ["unstable"]
