--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,15 @@ unindent = "0.1.5"
 serde_json = "1.0"
 crossbeam = "0.7.3"
 
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2.3", features = ["full"] }
 tokio-tungstenite = "*"
 tungstenite = "*"
-futures = "*"
+futures = "0.3.4"
 
 # looked cool, trait requirements didn't work
 #futures-intrusive = "0.3.0"
+
+task_scope = "0.1.1"
 
 [dependencies.async-std]
 version = "1.5.0"
