--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
+cargo-features = ["named-profiles"]
 [package]
 name = "milkshell"
 version = "0.1.0"
 authors = ["Lauren Chris Horne <lahwran0@gmail.com>"]
 edition = "2018"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,6 +14,8 @@ pest_derive = "2.0"
 regex = "1.3.1"
 lazy_static = "1.4.0"
 unindent = "0.1.5"
+
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 crossbeam = "0.7.3"
 
@@ -28,3 +32,7 @@ task_scope = "0.1.1"
 [dependencies.async-std]
 version = "1.5.0"
 features = ["unstable"]
+
+[profile.custom]
+inherits = "release"
+opt-level = "z"
