--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,14 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 crossbeam = "0.7.3"
 
+anyhow = "1.0.28"
+
 tokio = { version = "0.2.3", features = ["full"] }
 tokio-tungstenite = "*"
 tungstenite = "*"
 futures = "0.3.4"
+
+assert-json-diff = "1.0.3"
 
 # looked cool, trait requirements didn't work
 #futures-intrusive = "0.3.0"
